# AxiomCompress

./: .gitignore  ARCHITECTURE.md  AxiomC.vcxproj  AxiomC.vcxproj.filters  AxiomCompress.sln  AxiomGui.vcxproj  AxiomGui.vcxproj.filters  AxiomLib.vcxproj  AxiomLib.vcxproj.filters  AxiomRoundtrip.vcxproj  AxiomRoundtrip.vcxproj.filters  CLI_GUIDE.md  CMakeLists.txt  CMakePresets.json  FORMAT.md  GUI_HANDOFF.md  LICENSE  RAR_PARITY_PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-package.yml
assets/icons/fluent/: README.md
bench/: axc_inspect.py  bench_7zip.py  bench_codecs.py  gap_analysis.py
bench/results/: enwik8-0.4.0.0.csv  enwik8-level-window-0.4.0.0.csv  enwik9-thread-scaling-2026-07-18.csv  silesia-0.3.0.0.csv  silesia-0.4.0.0.csv
bench/results/gap-2026-07-16/: item1-distance-footer-members.csv  item1-distance-footer-tar.csv  item2-lane-order1-members.csv  item2-lane-order1-tar.csv  item2-match-byte-members.csv  item2-match-byte-tar.csv  item3-adaptive-blocks-members.csv  item3-adaptive-blocks-tar.csv  item5-executable-filter-tar.csv  item6-word16-gap-members.csv  item6-word16-gap-tar.csv  item6-word16-raw-members.csv  item7-full-previous-holdouts.csv  item7-full-previous-members.csv  item7-full-previous-tar.csv  silesia-gap-members.csv  silesia-gap-tar.csv  stream-inspection.txt  swarm-extended-levels.csv  workstation-baseline-members.csv  workstation-baseline-tar.csv
docs/: BENCHMARKING.md  FORMAT_SUPPORT.md  GAP_ANALYSIS_LZMA2.md  INSTALLER.md  VERSIONING.md
fuzz/: fuzz_archive.cpp  fuzz_decompress.cpp
include/axiom/: archive.hpp  axiom.hpp  version.hpp
installer/: Axiom.iss  build-installer.ps1
src/archive/: container.cpp  container_formats.cpp  container_internal.hpp  container_zip.cpp  fuzz_support.hpp  system_provider.cpp  system_provider.hpp  zip_split_backend.cpp  zip_split_backend.hpp
src/cli/: axiom_cli.rc  main.cpp  resource.hpp
src/codec/: block.cpp  block.hpp  fast_lz.cpp  fast_lz.hpp  incompressible.hpp  lz77.cpp  lz77.hpp  lz77_split.cpp  lz77_split.hpp  match_copy.hpp  transform.cpp  transform.hpp  varint.hpp
src/core/: archive.cpp  archive.hpp  benchmark_corpus.cpp  benchmark_corpus.hpp  checksum.cpp  checksum.hpp  checksum_clmul.cpp  compression_estimator.cpp  cpu.cpp  cpu.hpp  crypto.cpp  crypto.hpp  file_meta.cpp  file_meta.hpp  file_replace.hpp  hash.hpp  path_text.hpp  reed_solomon.cpp  reed_solomon.hpp  task_executor.hpp  windows_time.hpp
src/entropy/: huffman.cpp  huffman.hpp  range.cpp  range.hpp
src/gui/: about_dialog.cpp  about_dialog.hpp  app.hpp  archive_dialogs.cpp  archive_dialogs.hpp  archive_feature_dialogs.cpp  archive_feature_dialogs.hpp  archive_feature_options.hpp  axiom_gui.rc  benchmark_dialog.cpp  benchmark_dialog.hpp  browser_model.cpp  browser_model.hpp  compression_estimate_dialog.cpp  compression_estimate_dialog.hpp  custom_menu.cpp  custom_menu.hpp  dialog_support.cpp  dialog_support.hpp  directory_watcher.cpp  directory_watcher.hpp  drag_drop.cpp  drag_drop.hpp  keyboard_shortcuts.hpp  main.cpp  main_window.cpp  main_window_address.cpp  main_window_browser.cpp  main_window_commands.cpp  main_window_fileops.cpp  main_window_internal.hpp  main_window_quickadd.cpp  main_window_search.cpp  main_window_theme.cpp  main_window_util.cpp  main_window_views.cpp  message_dialog.cpp  message_dialog.hpp  operation_progress_window.cpp  operation_progress_window.hpp  (+12 more)
tests/: check.hpp  roundtrip_test.cpp
tools/: Update-AxiomVersion.ps1  bench_axiom_levels.ps1  bench_enwik8.ps1  build_fuzz.ps1  build_msvc.ps1  generate_readme_charts.py  run_fuzz.ps1  test_msvc.ps1
